added swagger-ui in application
