# src/gen/java/io/swagger/api/TokenApiService.java
@@ -16,6 +16,6 @@ import java.io.InputStream;
 import javax.ws.rs.core.Response;
 import javax.ws.rs.core.SecurityContext;
 import javax.validation.constraints.*;
-@javax.annotation.Generated(value = "io.swagger.codegen.v3.generators.java.JavaJerseyServerCodegen", date = "2021-01-22T09:23:35.355Z[GMT]")public abstract class AuthenticationApiService {
-    public abstract Response authenticate(Credentials body,SecurityContext securityContext) throws NotFoundException;
+@javax.annotation.Generated(value = "io.swagger.codegen.v3.generators.java.JavaJerseyServerCodegen", date = "2021-02-03T12:44:06.016Z[GMT]")public abstract class TokenApiService {
+    public abstract Response token(Credentials body,SecurityContext securityContext) throws NotFoundException;
 }
