# src/main/java/io/swagger/api/impl/TokenApiServiceImpl.java
@@ -1,8 +1,8 @@
 package io.swagger.api.impl;
 
 import io.swagger.api.ApiResponseMessage;
-import io.swagger.api.AuthenticationApiService;
 import io.swagger.api.NotFoundException;
+import io.swagger.api.TokenApiService;
 import io.swagger.api.impl.jdbc.Dao;
 import io.swagger.model.Credentials;
 import io.swagger.model.User;
@@ -14,15 +14,16 @@ import java.util.Base64;
 
 import static javax.ws.rs.core.Response.Status.FORBIDDEN;
 
-@javax.annotation.Generated(value = "io.swagger.codegen.v3.generators.java.JavaJerseyServerCodegen", date = "2021-01-22T09:23:35.355Z[GMT]")
-public class AuthenticationApiServiceImpl extends AuthenticationApiService {
+@javax.annotation.Generated(value = "io.swagger.codegen.v3.generators.java.JavaJerseyServerCodegen", date = "2021-02-03T12:44:06.016Z[GMT]")
+public class TokenApiServiceImpl extends TokenApiService {
+
 
   User user;
   private static final SecureRandom secureRandom = new SecureRandom();
   private static final Base64.Encoder base64Encoder = Base64.getUrlEncoder();
 
   @Override
-  public Response authenticate(Credentials body, SecurityContext securityContext) throws NotFoundException {
+  public Response token (Credentials body, SecurityContext securityContext) throws NotFoundException {
     String username = body.getUsername();
     String password = body.getPassword();
 
